# Fine-tuning-Macedonian-LLM

./: README.md  pyproject.toml
notebooks/: data-exp.ipynb
