[tool.poetry]
name = "timski-proekt"
version = "0.1.0"
description = "A project where we will fine tune a Macedonian LLM so it can be used by children."
authors = ["Marija Maneva <marija.maneva@loka.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
numpy = "^2.2.3"
pymupdf = "^1.25.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
